# STLAdaptors

./: CMakeLists.txt  main.cpp
ITMO_Adaptors/: CMakeLists.txt  adaptors.h  drop.h  filter.h  keys.h  reverse.h  take.h  transform.h  utils.h  values.h
tests/: CMakeLists.txt  tests.cpp
